# VideoDownload

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  celery_worker.py  config.py  download.py  download_bilibili.py  download_douyin.py  download_ixigua.py  download_youtube.py  pyproject.toml  send_celery_task.py
.github/workflows/: docker.yml  main.yml  test.yml
configs/: youtube.ini
devenv/: docker-compose.yml  rabbitmq.conf  setup.sh  start.sh  stop.sh
monitoring/: README.md  prometheus.yml  start.sh
monitoring/provisioning/dashboards/: celery-monitoring-grafana-dashboard.json  rabbitmq-overview_rev1.json
tests/: test_download_bilibili.py  test_download_ixigua.py  test_download_youtube.py
