[tool.poetry]
name = "videodownload"
version = "0.1.0"
description = ""
authors = ["dxsooo <zeohan.dxs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
yt-dlp = "^2022.11.11"
bilix = "^0.11.0"
you-get = {git = "https://github.com/soimort/you-get"}
python-dotenv = {version = "^0.21.0", optional = true}
celery = {version = "^5.2.7", optional = true}
pymongo = {version = "^4.2.0", optional = true}
flower = {version = "^1.2.0", optional = true}

[tool.poetry.group.dev.dependencies]
black = {version = "^22.6.0", allow-prereleases = true}
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-custom-exit-code = "^0.3.0"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = [
    "tests"
]
pythonpath = [
    "."
]

[tool.poetry.extras]
celery = ["python-dotenv", "celery", "pymongo", "flower", "protobuf"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
