[tool.poetry]
name = "videodownload"
version = "0.1.0"
description = ""
authors = ["dxsooo <zeohan.dxs@gmail.com>"]
package-mode = false


[tool.poetry.dependencies]
python = "^3.8.3"
yt-dlp = "^2024.7.1"
bilix = "^0.18.0"
python-dotenv = {version = "^1.0.0", optional = true}
celery = {version = "^5.2.7", optional = true}
pymongo = {version = "^4.6.0", optional = true}
flower = {version = "^2.0.0", optional = true}

[tool.poetry.group.dev.dependencies]
black = {version = "^24.0.0", allow-prereleases = true}
pytest = "^8.0.0"
pytest-cov = "^5.0.0"
pytest-custom-exit-code = "^0.3.0"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra"
testpaths = [
    "tests"
]
pythonpath = [
    "."
]

[tool.poetry.extras]
celery = ["python-dotenv", "celery", "pymongo", "flower", "protobuf"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
